[package]
name = "hello-asso"
version = "0.1.0"
edition = "2021"
license = "EFL-2.0"

[dependencies]
derivative = "2.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
