[package]
name = "helloasso"
version = "0.1.0"
edition = "2021"
license = "EFL-2.0"
description = "A package built to access helloasso api, https://api.helloasso.com/v5/swagger/ui/index"
homepage = "https://github.com/Mattherix/hello-asso"
repository = "https://github.com/Mattherix/hello-asso"
readme = "README.md"
keywords = ["helloasso", "nonprofit", "webapi", "api", "wrapper"]
categories = ["api-bindings"]
exclude = [
    ".github/*",
    "env.example",
    ".gitignore"
]

[dependencies]
derivative = "2.2.0"
serde_json = "1.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
