[package]
name = "helloasso"
version = "0.4.0"
edition = "2021"
license = "EFL-2.0"
description = "A package built to access helloasso api, https://api.helloasso.com/v5/swagger/ui/index"
homepage = "https://github.com/Mattherix/hello-asso"
repository = "https://github.com/Mattherix/hello-asso"
readme = "README.md"
keywords = ["helloasso", "nonprofit", "webapi", "api", "wrapper"]
categories = ["api-bindings"]
exclude = [
    ".github/*",
    "env.example",
    ".gitignore"
]

[dependencies]
derivative = "2.2.0"
serde_json = "1.0"
log = { version = "0.4.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.40"
url = { version = "2.4.0",features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
log = ["dep:log"]
